--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 </head>
 <body>
     <form>
-        <label for="user">Usuario:</label>
+        <label for="user">user:</label>
         <input id="user" type="text"/>
         <br /> 
         <!--aqui foi feito uma estilização na propria label, ela nao foi modificada no body,pois o style feito aqui tem por ordem a preferencia-->
-        <label style="color: red;" for="password">Senha:</label>
+        <label style="color: red;" for="password">Password:</label>
         <input id="password" type="password"/>
         <br />
         <button class="buttonSend" type="submit" >Send</button>
-        <button class="buttonClear" type="reset" >clear</button>
+        <button class="buttonClear" type="reset" >Clear</button>
     </form>
 </body>
 </html>
