alterei o user para User

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <form>
-        <label for="user">user:</label>
+        <label for="user">User:</label>
         <input id="user" type="text"/>
         <br /> 
         <!--aqui foi feito uma estilização na propria label, ela nao foi modificada no body,pois o style feito aqui tem por ordem a preferencia-->
