sendo feito link para o style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulários</title>
+    <!--  pode ser feito diretamente na pagina como os passos abaixo , ou ser criado um new file style.css
     <style>
         label{
             color: white;
@@ -22,6 +23,8 @@
             background-color: red;
         }
     </style>
+    Para isso temos que criar um link com a pagina do Index. siga os passos abaixo para instrução do link-->
+    <link rel="stylesheet" type=" text/css" href="./style.css"
 </head>
 <body>
     <form>
