apenas mudei uma parte do texto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             background-color: red;
         }
     </style>
-    Para isso temos que criar um link com a pagina do Index. siga os passos abaixo para instrução do link-->
+    Para criar style.css  temos que criar um link com a pagina do Index. siga os passos abaixo para instrução do link-->
     <link rel="stylesheet" type=" text/css" href="./style.css"
 </head>
 <body>
